--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
         }
         .custom-scroll::-webkit-scrollbar {
             width: 6px;
+            height: 6px;
         }
         .custom-scroll::-webkit-scrollbar-track {
             background: #f1f1f1;
+            border-radius: 10px;
         }
         .custom-scroll::-webkit-scrollbar-thumb {
             background: #c7c7c7;
@@ -97,8 +99,6 @@
         const { useState, useEffect, useRef, useCallback } = React;
         
         // --- 🔒 การตั้งค่าสิทธิ์เข้าใช้งาน (Whitelist) ---
-        // หากต้องการจำกัดให้เล่นเฉพาะบางคน ให้ใส่ชื่อใน [ ] เช่น ["Admin", "Student1"]
-        // หากปล่อยว่าง [] จะสามารถเล่นได้ทุกคน
         const WHITELISTED_USERS = []; 
 
         // --- Firebase Configuration ---
@@ -554,7 +554,7 @@
             return null;
         };
 
-        const Leaderboard = ({ currentUser, screenMode }) => {
+        const Leaderboard = ({ onBack, currentUser, playSound, screenMode }) => {
             const [scores, setScores] = useState([]);
             const [viewMode, setViewMode] = useState('normal'); 
             const [loading, setLoading] = useState(true);
@@ -601,7 +601,76 @@
             };
 
             return (
-                <div className="flex flex-col items-center justify-center min-h-screen p-4 anim-pop"><div className={`${getPanelClass(screenMode)} h-[85vh] flex flex-col`}><h2 className="text-3xl font-bold text-center text-yellow-500 mb-2 mt-2"><i className="fa-solid fa-trophy mr-2"></i>อันดับยอดเยี่ยม</h2><div className="flex gap-2 mb-4 mt-2 overflow-x-auto pb-2 px-2 custom-scroll">{['normal', 'baby', 'god_2x1', 'god_3x1', 'god_2x2', 'god_div_3x1', 'god_div_4x1', 'god_div_4x2'].map(m => <button key={m} onClick={() => setViewMode(m)} className={`px-4 py-2 rounded-full text-sm font-bold whitespace-nowrap transition flex-shrink-0 ${viewMode === m ? 'bg-blue-600 text-white shadow-md' : 'bg-gray-200 text-gray-600'}`}>{getModeLabel(m)}</button>)}</div><div className="flex-1 overflow-y-auto custom-scroll mt-2 pr-2">{loading ? <div className="text-center text-gray-400 mt-10">กำลังโหลดข้อมูล...</div> : scores.length === 0 ? <div className="text-center text-gray-400 mt-10">ยังไม่มีคะแนนในโหมด {getModeLabel(viewMode)}</div> : <table className="w-full text-left border-collapse"><thead><tr className="text-gray-400 text-sm border-b border-gray-200"><th className="py-2 px-2 font-light">#</th><th className="py-2 px-2 font-light">ผู้เล่น</th><th className="py-2 px-2 font-light text-right">คะแนน</th></tr></thead><tbody>{scores.map((s, index) => {const isMe = currentUser && s.username === currentUser.displayName; return (<tr key={index} className={`border-b border-gray-100 last:border-0 ${isMe ? 'bg-yellow-50' : ''}`}><td className="py-3 px-2 font-bold text-gray-500">{index + 1}</td><td className={`py-3 px-2 ${isMe ? 'text-blue-600' : 'text-gray-700'}`}><div className="font-semibold">{s.username} {isMe && '(คุณ)'}</div><div className="text-xs text-gray-400 font-light">{formatTimestamp(s.timestamp)}</div></td><td className="py-3 px-2 text-right font-bold text-blue-500">{s.score}</td></tr>);})}</tbody></table>}</div></div></div>
+                <div className="flex flex-col items-center justify-center min-h-screen p-4 anim-pop">
+                    <div className={`${getPanelClass(screenMode)} h-[85vh] flex flex-col relative`}>
+                        {/* Header */}
+                        <div className="mb-4 mt-2 relative shrink-0">
+                            <button onClick={() => { playSound('click'); onBack(); }} className="absolute left-0 top-1 text-gray-400 hover:text-gray-600 z-10">
+                                <i className="fa-solid fa-arrow-left fa-xl"></i>
+                            </button>
+                            <h2 className="text-3xl font-bold text-center text-yellow-500">
+                                <i className="fa-solid fa-trophy mr-2"></i>อันดับ
+                            </h2>
+                        </div>
+
+                        {/* Body: Split View */}
+                        <div className="flex flex-1 overflow-hidden gap-3">
+                            {/* Left: Vertical Menu */}
+                            <div className="w-1/3 min-w-[100px] flex flex-col gap-2 overflow-y-auto custom-scroll pr-1 pb-2">
+                                {['normal', 'baby', 'god_2x1', 'god_3x1', 'god_2x2', 'god_div_3x1', 'god_div_4x1', 'god_div_4x2'].map(m => (
+                                    <button 
+                                        key={m} 
+                                        onClick={() => { playSound('click'); setViewMode(m); }} 
+                                        className={`px-3 py-3 rounded-xl text-sm font-bold transition text-left shadow-sm leading-tight
+                                            ${viewMode === m 
+                                                ? 'bg-blue-500 text-white ring-2 ring-blue-300' 
+                                                : 'bg-gray-100 text-gray-500 hover:bg-gray-200'}`}
+                                    >
+                                        {getModeLabel(m)}
+                                    </button>
+                                ))}
+                            </div>
+                            
+                            {/* Right: Table */}
+                            <div className="flex-1 overflow-y-auto custom-scroll bg-gray-50 rounded-xl p-2 shadow-inner">
+                                {loading ? (
+                                    <div className="text-center text-gray-400 mt-10">
+                                        <i className="fa-solid fa-circle-notch fa-spin mb-2"></i><br/>กำลังโหลด...
+                                    </div>
+                                ) : scores.length === 0 ? (
+                                    <div className="text-center text-gray-400 mt-10">
+                                        ยังไม่มีคะแนน
+                                    </div>
+                                ) : (
+                                    <table className="w-full text-left border-collapse">
+                                        <thead className="sticky top-0 bg-gray-50 z-10">
+                                            <tr className="text-gray-400 text-xs border-b border-gray-200">
+                                                <th className="py-2 px-1 font-light">#</th>
+                                                <th className="py-2 px-1 font-light">ผู้เล่น</th>
+                                                <th className="py-2 px-1 font-light text-right">แต้ม</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {scores.map((s, index) => {
+                                                const isMe = currentUser && s.username === currentUser.displayName;
+                                                return (
+                                                    <tr key={index} className={`border-b border-gray-100 last:border-0 text-sm ${isMe ? 'bg-yellow-100 rounded' : ''}`}>
+                                                        <td className="py-2 px-1 font-bold text-gray-500">{index + 1}</td>
+                                                        <td className={`py-2 px-1 ${isMe ? 'text-blue-600' : 'text-gray-700'}`}>
+                                                            <div className="font-semibold truncate max-w-[100px]">{s.username}</div>
+                                                            <div className="text-[10px] text-gray-400 font-light">{formatTimestamp(s.timestamp)}</div>
+                                                        </td>
+                                                        <td className="py-2 px-1 text-right font-bold text-blue-500">{s.score}</td>
+                                                    </tr>
+                                                );
+                                            })}
+                                        </tbody>
+                                    </table>
+                                )}
+                            </div>
+                        </div>
+                    </div>
+                </div>
             );
         };
 
